samples/_failures_safe/1761392203_a96817_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6d41385.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_c6d41385.c:153:5: error: expected declaration or statement at end of input
  153 |     token->type = TOKEN_STRING;
      |     ^~~~~
